# wallpapod

./: Cargo.toml  LICENSE  README.md
apodw-bin/: Cargo.toml
wallpapod-bin/: Cargo.toml
wallpapod-bin/src/: apod.rs  args.rs  config.rs  main.rs
