[package]
name = "wallpapod"
description = ""
authors = ["Noé Ksiazek <noe@ksiazek.xyz>"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
colorz = { version = "1.1.2", features = ["std"] }
confy = "0.6.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
wallpaper = { version = "3.2.0", features = ["from_url"] }
